improve ipynb tutorial

--- a/library_example.ipynb
+++ b/library_example.ipynb
@@ -86,8 +86,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cloudmesh.common in /Users/grey/Desktop/github/cloudmesh-community/cm/cloudmesh-common (4.3.162)\n",
+      "Requirement already satisfied: psutil in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (5.9.3)\n",
+      "Requirement already satisfied: pytz in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (2022.5)\n",
+      "Requirement already satisfied: python-hostlist in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (1.22)\n",
+      "Requirement already satisfied: simplejson in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (3.17.6)\n",
+      "Requirement already satisfied: oyaml in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (1.0)\n",
+      "Requirement already satisfied: colorama in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (0.4.4)\n",
+      "Requirement already satisfied: humanize in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (4.4.0)\n",
+      "Requirement already satisfied: python-dateutil in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (2.8.2)\n",
+      "Requirement already satisfied: tabulate in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (0.9.0)\n",
+      "Requirement already satisfied: requests in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (2.28.1)\n",
+      "Requirement already satisfied: pyfiglet in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (0.8.post1)\n",
+      "Requirement already satisfied: tqdm in /Users/grey/ENV3/lib/python3.11/site-packages (from cloudmesh.common) (4.64.1)\n",
+      "Requirement already satisfied: pyyaml in /Users/grey/ENV3/lib/python3.11/site-packages (from oyaml->cloudmesh.common) (5.4.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/grey/ENV3/lib/python3.11/site-packages (from python-dateutil->cloudmesh.common) (1.16.0)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/grey/ENV3/lib/python3.11/site-packages (from requests->cloudmesh.common) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/grey/ENV3/lib/python3.11/site-packages (from requests->cloudmesh.common) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/grey/ENV3/lib/python3.11/site-packages (from requests->cloudmesh.common) (1.26.12)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/grey/ENV3/lib/python3.11/site-packages (from requests->cloudmesh.common) (2022.9.24)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "os.system(\"pip install -U cloudmesh.common\")"
@@ -124,7 +158,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 5,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -172,7 +206,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 3,
+   "execution_count": 25,
    "outputs": []
   },
   {
@@ -187,7 +221,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 6,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -200,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "datadir = f\"{basedir}/data\""
@@ -230,11 +264,11 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 37,
+   "execution_count": 28,
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "gregor.txt\n",
       "\n"
@@ -294,26 +328,18 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 7,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/DSC-SPIDAL/dl-hec.git\n",
-      "  Cloning https://github.com/DSC-SPIDAL/dl-hec.git to /private/var/folders/q5/s8_pcggn5f73xnz11zjqrhlw0000gp/T/pip-req-build-ly081agt\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/DSC-SPIDAL/dl-hec.git /private/var/folders/q5/s8_pcggn5f73xnz11zjqrhlw0000gp/T/pip-req-build-ly081agt\n",
-      "  Resolved https://github.com/DSC-SPIDAL/dl-hec.git to commit f7eec66ce78d4ff7baaad0be503cbc760ee95f96\n",
+      "  Cloning https://github.com/DSC-SPIDAL/dl-hec.git to /private/var/folders/q5/s8_pcggn5f73xnz11zjqrhlw0000gp/T/pip-req-build-87oh7t0a\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/DSC-SPIDAL/dl-hec.git /private/var/folders/q5/s8_pcggn5f73xnz11zjqrhlw0000gp/T/pip-req-build-87oh7t0a\n",
+      "  Resolved https://github.com/DSC-SPIDAL/dl-hec.git to commit 36fd5def45d517abf6494208134222dcee427b1c\n",
       "  Preparing metadata (setup.py): started\n",
       "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: hec\n",
-      "  Building wheel for hec (setup.py): started\n",
-      "  Building wheel for hec (setup.py): finished with status 'done'\n",
-      "  Created wheel for hec: filename=hec-1.0-py3-none-any.whl size=141946 sha256=83bd2ef18c5b388136a50e5e3fad3d13ce941b4865f79c92c8f9a399ce6a640c\n",
-      "  Stored in directory: /private/var/folders/q5/s8_pcggn5f73xnz11zjqrhlw0000gp/T/pip-ephem-wheel-cache-0s65ymuk/wheels/5e/75/dc/9f2c8bb24ff4885ebcd5ecebc2b2b10644125f36c47cd7fd92\n",
-      "Successfully built hec\n",
-      "Installing collected packages: hec\n",
-      "Successfully installed hec-1.0\n",
       "\n"
      ]
     }
@@ -342,7 +368,7 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 8,
+   "execution_count": 30,
    "outputs": []
   },
   {
@@ -361,20 +387,20 @@
      "name": "#%%\n"
     }
    },
-   "execution_count": 9,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "01/03/2023, 08:31:13 UTC\n"
+      "01/03/2023, 09:01:47 UTC\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -396,14 +422,185 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Globals\n",
+    "\n",
+    "Using Global variable is often to be avoided as it can introduce unintended\n",
+    "side effects. However, in some cases they can be an easy way to communicate\n",
+    "global state in programs. HOwever the following has to be considered:\n",
+    "\n",
+    "1. globals are defined sepeartly for each file. Thus if they need to be reused\n",
+    "   between files they must be explicitly defined in each file the same global is\n",
+    "   reused.\n",
+    "2. Before a global variable can be reused it must be decalerd and initialized.\n",
+    "   Without that the global variable can not be used\n",
+    "3. It is advisable in large programs to declare all globals in a single file so\n",
+    "   it is easier to track if they have been declared. It is possible to have\n",
+    "   multiple such files, so that they can be organized by concern/topic.\n",
+    "4. If used in a notebook, the initialization of the global variables need to\n",
+    "   be done first. Then each variable used needs to be explicily imported. It\n",
+    "   helps to create such imports as comments in the file they are decalared so\n",
+    "   the import can be copied into other files using the global statement.\n",
+    "   To remove the comments in the file where they are supposed to be\n",
+    "   used simply highlight all lines with the commented globals and say\n",
+    "   `COMAND-/` to remove the `#`. We recommend that you remove all global\n",
+    "   variables statements that you do not use"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**THIS IS NOT YET WORKING**"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "check if it is in globals: True\n",
+      "None\n",
+      "1\n",
+      "my_global_a=1 should be 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hec.global_variables import my_global_a\n",
+    "from pprint import pprint\n",
+    "\n",
+    "print(my_global_a)\n",
+    "\n",
+    "print(\"check if it is in globals:\", 'my_global_a' in globals())\n",
+    "\n",
+    "def my_function_using_a_global():\n",
+    "    global my_global_a\n",
+    "    print(my_global_a)\n",
+    "    my_global_a = 1\n",
+    "    print(my_global_a)\n",
+    "\n",
+    "my_function_using_a_global()\n",
+    "\n",
+    "print (f\"my_global_a={my_global_a}\", \"should be 1\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To import all global variables from a file we can use the usual mport pythoin\n",
+    "statement with an as statement to give it a \"topic\" name so we can use it while\n",
+    "preceeding the topic name"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "import hec.global_variables as gl\n",
+    "\n",
+    "print (gl.my_global_a)\n",
+    "print(gl.my_global_b)\n",
+    "print(gl.my_global_c)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Naturally, we still could use an explicit import"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b = b\n",
+      "c = c\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hec.global_variables import my_global_b\n",
+    "from hec.global_variables import my_global_c\n",
+    "print (my_global_b, \"=\", gl.my_global_b)\n",
+    "print(my_global_c, \"=\", gl.my_global_c)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Syntax highlights\n",
+    "\n",
+    "Arguably one of the most valuble features of pyCharm is syntax highlighting.\n",
+    "You will need to make sure that you import in your code the libraries that you\n",
+    "develop as `Mark Directory as -> Source Root`. This will make sure your syntax\n",
+    "highlights are properly applied to your library. In our case we do it on `dl-hec`"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
