add a class example

--- a/library_example.ipynb
+++ b/library_example.ipynb
@@ -578,7 +578,53 @@
     "from hec.global_variables import my_global_b\n",
     "from hec.global_variables import my_global_c\n",
     "print (my_global_b, \"=\", gl.my_global_b)\n",
-    "print(my_global_c, \"=\", gl.my_global_c)\n"
+    "print(my_global_c, \"=\", gl.my_global_c)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Classes to organize variables\n",
+    "\n",
+    "The best way to organize large codes is with the use of classes as they include\n",
+    "the ability not only to add variables, but also to add methods that operate on\n",
+    "these variables."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hec.myclass import myclass\n",
+    "config = myclass()\n",
+    "\n",
+    "print(config.a)\n",
+    "\n",
+    "config.print_values()"
    ],
    "metadata": {
     "collapsed": false,
@@ -595,7 +641,17 @@
     "Arguably one of the most valuble features of pyCharm is syntax highlighting.\n",
     "You will need to make sure that you import in your code the libraries that you\n",
     "develop as `Mark Directory as -> Source Root`. This will make sure your syntax\n",
-    "highlights are properly applied to your library. In our case we do it on `dl-hec`"
+    "highlights are properly applied to your library. In our case we do it on `dl-hec`\n",
+    "\n",
+    "## Filenames in lowe case letters\n",
+    "\n",
+    "To be consistent and avoid issues with capitalization in filenames, as some\n",
+    "operating system filesystems do not distingish between lower and uper letters\n",
+    "in commandshells we recommend to use all lower case letters for filenames.\n",
+    "That this is best practice can even be seen when exporting an ipython notbook\n",
+    "to a python file as the filename will be converted to all lower case letters\n",
+    "(at least on macOS).\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
