--- a/library_example.ipynb
+++ b/library_example.ipynb
@@ -636,6 +636,57 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## dataclasses\n",
+    "\n",
+    "If you use a newer version of python one can also use dataclasses which introduces the init method based on the decalration of the variables in the class. However, this\n",
+    "may not work in previous version of python, especially those that are still\n",
+    "used on system defaults. Thus, if you notice dataclasses are missing form your python version you may be able to add them with\n",
+    "\n",
+    "```pip install dataclasses```\n",
+    "\n",
+    "Only do it if you find that the dataclasses do not work in your python version.\n",
+    "\n",
+    "If dataclasses are available please use them as follows\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hec.mydataclass import Data\n",
+    "config = Data()\n",
+    "print(config.a)\n",
+    "\n",
+    "config.print_values()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Syntax highlights\n",
     "\n",
     "Arguably one of the most valuble features of pyCharm is syntax highlighting.\n",
@@ -650,13 +701,24 @@
     "in commandshells we recommend to use all lower case letters for filenames.\n",
     "That this is best practice can even be seen when exporting an ipython notbook\n",
     "to a python file as the filename will be converted to all lower case letters\n",
-    "(at least on macOS).\n",
-    "\n"
+    "(at least on macOS).\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
